// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test disabling of a ListItem control 1`] = `
<ListItem
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={5}
  left=""
  leftButton={null}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="ListItem"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[MockFunction]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding=""
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={null}
  title="test title"
  tooltip=""
  top=""
  useedit={false}
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={true}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    left=""
    leftButton={null}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="ListItem"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[MockFunction]}
    onDoubleClick={[Function]}
    onError={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    padding=""
    reset={false}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={null}
    title="test title"
    tooltip=""
    top=""
    useedit={false}
    visible={true}
    widget={null}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <Item
        bottom=""
        className="ui-listitem"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={true}
        err={null}
        errorMessage=""
        focus={false}
        height=""
        hiddenLeftButton={false}
        hiddenRightButton={false}
        href={
          Object {
            "selectHandler": [Function],
            "sizing": "normal",
          }
        }
        id=""
        layout={5}
        left=""
        leftButton={null}
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="ListItem"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseOut={[Function]}
        onSelect={[Function]}
        onUpdate={[Function]}
        padding=""
        rightButton={null}
        selected={false}
        sizing="normal"
        stacked={false}
        style={Object {}}
        testing={true}
        theme={null}
        title="test title"
        tooltip=""
        top=""
        useedit={false}
        visible={true}
        widget={null}
        width=""
        xcss={null}
      >
        <Wrapper
          bottom=""
          className="ui-listitem"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={true}
          err={null}
          errorMessage=""
          focus={false}
          height=""
          hiddenLeftButton={false}
          hiddenRightButton={false}
          href={
            Object {
              "selectHandler": [Function],
              "sizing": "normal",
            }
          }
          id=""
          layout={5}
          left=""
          leftButton={null}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          obj="ListItem"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDoubleClick={[Function]}
          onError={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          onSelect={[Function]}
          onUpdate={[Function]}
          padding=""
          reset={false}
          rightButton={null}
          selected={false}
          sizing="normal"
          stacked={false}
          style={Object {}}
          testing={true}
          theme={null}
          title="test title"
          tooltip=""
          top=""
          useedit={false}
          visible={true}
          widget={null}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "itemHoverColor": "#bedb39",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "titleBarBackgroundColor": "#004358",
                "titleBarForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.li
              className="ui-item ui-listitem"
              id=""
              nohover={false}
              onBlur={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseOut={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
            >
              <StyledComponent
                className="ui-item ui-listitem"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bZQynM",
                      "isStatic": false,
                      "lastClassName": "fXsBlq",
                      "rules": Array [
                        "
	background-color: ",
                        [Function],
                        ";
	color: ",
                        [Function],
                        ";
	cursor: default;
	display: flex;

	",
                        [Function],
                        "

	&:hover .ui-item-button {
		display: inline-flex;
		opacity: 1.0;
	}
",
                      ],
                    },
                    "displayName": "styled.li",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bZQynM",
                    "target": "li",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                id=""
                nohover={false}
                onBlur={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                selected={false}
                sizing="normal"
                style={Object {}}
              >
                <li
                  className="ui-item ui-listitem sc-bZQynM fXsBlq"
                  id=""
                  onBlur={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onMouseOut={[Function]}
                  selected={false}
                  style={Object {}}
                >
                  <Title
                    bottom=""
                    className="ui-listitem"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={true}
                    err={null}
                    errorMessage=""
                    focus={false}
                    height=""
                    hiddenLeftButton={false}
                    hiddenRightButton={false}
                    href={
                      Object {
                        "selectHandler": [Function],
                        "sizing": "normal",
                      }
                    }
                    id=""
                    layout={5}
                    left=""
                    leftButton={null}
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    obj="ListItem"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onMouseOut={[Function]}
                    onSelect={[Function]}
                    onUpdate={[Function]}
                    padding=""
                    rightButton={null}
                    selected={false}
                    sizing="normal"
                    stacked={false}
                    style={Object {}}
                    testing={true}
                    theme={null}
                    title="test title"
                    tooltip=""
                    top=""
                    useedit={false}
                    visible={true}
                    widget={null}
                    width=""
                    xcss={null}
                  >
                    <Wrapper
                      bottom=""
                      className="ui-listitem"
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={true}
                      err={null}
                      errorMessage=""
                      focus={false}
                      height=""
                      hiddenLeftButton={false}
                      hiddenRightButton={false}
                      href={
                        Object {
                          "selectHandler": [Function],
                          "sizing": "normal",
                        }
                      }
                      id=""
                      layout={5}
                      left=""
                      leftButton={null}
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      obj="ListItem"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                      onError={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseOut={[Function]}
                      onSelect={[Function]}
                      onUpdate={[Function]}
                      padding=""
                      reset={false}
                      rightButton={null}
                      selected={false}
                      sizing="normal"
                      stacked={false}
                      style={Object {}}
                      testing={true}
                      theme={null}
                      title="test title"
                      tooltip=""
                      top=""
                      useedit={false}
                      visible={true}
                      widget={null}
                      width=""
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#c0c0c0",
                            "color": "#000000",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "headerHoverColor": "#ffe11a",
                            "hoverColor": "#c0c0c0",
                            "inputBorderColor": "#c0c0c0",
                            "itemHoverColor": "#bedb39",
                            "selectedBackgroundColor": "#1f8a70",
                            "selectedForegroundColor": "#ffe11a",
                            "titleBarBackgroundColor": "#004358",
                            "titleBarForegroundColor": "#ffe11a",
                            "tooltipBackgroundColor": "#708090",
                            "tooltipForegroundColor": "#ffffff",
                            "transitionDelay": "0.5s",
                          }
                        }
                      >
                        <styled.div
                          className="ui-title-bar ui-listitem"
                          disabled={true}
                          layout={5}
                          sizing="normal"
                          style={Object {}}
                          visible={true}
                        >
                          <StyledComponent
                            className="ui-title-bar ui-listitem"
                            disabled={true}
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bxivhb",
                                  "isStatic": false,
                                  "lastClassName": "gsbVwS",
                                  "rules": Array [
                                    "
	box-sizing: border-box;
	display: flex;
	flex-direction: ",
                                    [Function],
                                    ";
	flex-grow: 1;

	",
                                    [Function],
                                    "
	",
                                    [Function],
                                    "
",
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bxivhb",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            layout={5}
                            sizing="normal"
                            style={Object {}}
                            visible={true}
                          >
                            <div
                              className="ui-title-bar ui-listitem sc-bxivhb gsbVwS"
                              disabled={true}
                              style={Object {}}
                            >
                              <Styled(Label)
                                bottom=""
                                className="ui-title"
                                contentEditable={false}
                                controlled={true}
                                direction="right"
                                disabled={true}
                                err={null}
                                errorMessage=""
                                focus={false}
                                height=""
                                hiddenLeftButton={false}
                                hiddenRightButton={false}
                                href={
                                  Object {
                                    "selectHandler": [Function],
                                    "sizing": "normal",
                                  }
                                }
                                id=""
                                layout={5}
                                left=""
                                leftButton={null}
                                location="none"
                                noedit={false}
                                nohover={false}
                                noripple={false}
                                notheme={false}
                                obj="ListItem"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onDoubleClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyPress={[Function]}
                                onMouseOut={[Function]}
                                onSelect={[Function]}
                                padding=""
                                rightButton={null}
                                selected={false}
                                sizing="normal"
                                stacked={false}
                                style={Object {}}
                                testing={true}
                                text="test title"
                                theme={null}
                                title="test title"
                                tooltip=""
                                top=""
                                useedit={false}
                                visible={true}
                                widget={null}
                                width=""
                                xcss={
                                  Array [
                                    "
	text-align: left;
	flex: 5;
",
                                  ]
                                }
                              >
                                <StyledComponent
                                  bottom=""
                                  className="ui-title"
                                  contentEditable={false}
                                  controlled={true}
                                  direction="right"
                                  disabled={true}
                                  err={null}
                                  errorMessage=""
                                  focus={false}
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "sc-EHOje",
                                        "isStatic": false,
                                        "lastClassName": "hLLCNa",
                                        "rules": Array [
                                          "
	",
                                          "
	padding: ",
                                          [Function],
                                          ";

	",
                                          [Function],
                                          "
",
                                          "
",
                                        ],
                                      },
                                      "defaultStyles": Object {},
                                      "displayName": "Styled(Label)",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "sc-EHOje",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                      Symbol(Symbol.hasInstance): [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  height=""
                                  hiddenLeftButton={false}
                                  hiddenRightButton={false}
                                  href={
                                    Object {
                                      "selectHandler": [Function],
                                      "sizing": "normal",
                                    }
                                  }
                                  id=""
                                  layout={5}
                                  left=""
                                  leftButton={null}
                                  location="none"
                                  noedit={false}
                                  nohover={false}
                                  noripple={false}
                                  notheme={false}
                                  obj="ListItem"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  onDoubleClick={[Function]}
                                  onFocus={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onMouseOut={[Function]}
                                  onSelect={[Function]}
                                  padding=""
                                  rightButton={null}
                                  selected={false}
                                  sizing="normal"
                                  stacked={false}
                                  style={Object {}}
                                  testing={true}
                                  text="test title"
                                  theme={null}
                                  title="test title"
                                  tooltip=""
                                  top=""
                                  useedit={false}
                                  visible={true}
                                  widget={null}
                                  width=""
                                  xcss={
                                    Array [
                                      "
	text-align: left;
	flex: 5;
",
                                    ]
                                  }
                                >
                                  <Label
                                    bottom=""
                                    className="ui-title sc-EHOje hLLCNa"
                                    contentEditable={false}
                                    controlled={true}
                                    direction="right"
                                    disabled={true}
                                    err={null}
                                    errorMessage=""
                                    focus={false}
                                    height=""
                                    hiddenLeftButton={false}
                                    hiddenRightButton={false}
                                    href={
                                      Object {
                                        "selectHandler": [Function],
                                        "sizing": "normal",
                                      }
                                    }
                                    id=""
                                    layout={5}
                                    left=""
                                    leftButton={null}
                                    location="none"
                                    noedit={false}
                                    nohover={false}
                                    noripple={false}
                                    notheme={false}
                                    obj="ListItem"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onClick={[Function]}
                                    onDoubleClick={[Function]}
                                    onFocus={[Function]}
                                    onKeyDown={[Function]}
                                    onKeyPress={[Function]}
                                    onMouseOut={[Function]}
                                    onSelect={[Function]}
                                    onUpdate={[Function]}
                                    padding=""
                                    rightButton={null}
                                    selected={false}
                                    sizing="normal"
                                    stacked={false}
                                    style={Object {}}
                                    testing={true}
                                    text="test title"
                                    theme={null}
                                    title="test title"
                                    tooltip=""
                                    top=""
                                    useedit={false}
                                    visible={true}
                                    widget={null}
                                    width=""
                                    xcss={
                                      Array [
                                        "
	text-align: left;
	flex: 5;
",
                                      ]
                                    }
                                  >
                                    <Wrapper
                                      bottom=""
                                      className="ui-title sc-EHOje hLLCNa"
                                      contentEditable={false}
                                      controlled={true}
                                      direction="right"
                                      disabled={true}
                                      err={null}
                                      errorMessage=""
                                      focus={false}
                                      height=""
                                      hiddenLeftButton={false}
                                      hiddenRightButton={false}
                                      href={
                                        Object {
                                          "selectHandler": [Function],
                                          "sizing": "normal",
                                        }
                                      }
                                      id=""
                                      layout={5}
                                      left=""
                                      leftButton={null}
                                      location="none"
                                      noedit={false}
                                      nohover={false}
                                      noripple={false}
                                      notheme={false}
                                      obj="ListItem"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onClick={[Function]}
                                      onDoubleClick={[Function]}
                                      onError={[Function]}
                                      onFocus={[Function]}
                                      onKeyDown={[Function]}
                                      onKeyPress={[Function]}
                                      onMouseOut={[Function]}
                                      onSelect={[Function]}
                                      onUpdate={[Function]}
                                      padding=""
                                      reset={false}
                                      rightButton={null}
                                      selected={false}
                                      sizing="normal"
                                      stacked={false}
                                      style={Object {}}
                                      testing={true}
                                      text="test title"
                                      theme={null}
                                      title="test title"
                                      tooltip=""
                                      top=""
                                      useedit={false}
                                      visible={true}
                                      widget={null}
                                      width=""
                                      xcss={
                                        Array [
                                          "
	text-align: left;
	flex: 5;
",
                                        ]
                                      }
                                    >
                                      <ThemeProvider
                                        theme={
                                          Object {
                                            "backgroundColor": "#ffffff",
                                            "borderColor": "#c0c0c0",
                                            "color": "#000000",
                                            "headerBackgroundColor": "#004358",
                                            "headerForegroundColor": "#ffffff",
                                            "headerHoverColor": "#ffe11a",
                                            "hoverColor": "#c0c0c0",
                                            "inputBorderColor": "#c0c0c0",
                                            "itemHoverColor": "#bedb39",
                                            "selectedBackgroundColor": "#1f8a70",
                                            "selectedForegroundColor": "#ffe11a",
                                            "titleBarBackgroundColor": "#004358",
                                            "titleBarForegroundColor": "#ffe11a",
                                            "tooltipBackgroundColor": "#708090",
                                            "tooltipForegroundColor": "#ffffff",
                                            "transitionDelay": "0.5s",
                                          }
                                        }
                                      >
                                        <styled.span
                                          className="ui-label ui-title sc-EHOje hLLCNa"
                                          contentEditable={false}
                                          disabled={true}
                                          onBlur={[Function]}
                                          onClick={[Function]}
                                          onDoubleClick={[Function]}
                                          onKeyDown={[Function]}
                                          onKeyPress={[Function]}
                                          sizing="normal"
                                          style={Object {}}
                                          suppressContentEditableWarning={true}
                                          visible={true}
                                        >
                                          <StyledComponent
                                            className="ui-label ui-title sc-EHOje hLLCNa"
                                            contentEditable={false}
                                            disabled={true}
                                            forwardedComponent={
                                              Object {
                                                "$$typeof": Symbol(react.forward_ref),
                                                "attrs": Array [],
                                                "componentStyle": ComponentStyle {
                                                  "componentId": "sc-htpNat",
                                                  "isStatic": false,
                                                  "lastClassName": "gjQKzk",
                                                  "rules": Array [
                                                    "
	background-color: inherit;

	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
",
                                                  ],
                                                },
                                                "displayName": "styled.span",
                                                "foldedComponentIds": Array [],
                                                "render": [Function],
                                                "styledComponentId": "sc-htpNat",
                                                "target": "span",
                                                "toString": [Function],
                                                "warnTooManyClasses": [Function],
                                                "withComponent": [Function],
                                              }
                                            }
                                            forwardedRef={[Function]}
                                            onBlur={[Function]}
                                            onClick={[Function]}
                                            onDoubleClick={[Function]}
                                            onKeyDown={[Function]}
                                            onKeyPress={[Function]}
                                            sizing="normal"
                                            style={Object {}}
                                            suppressContentEditableWarning={true}
                                            visible={true}
                                          >
                                            <span
                                              className="ui-label ui-title sc-EHOje hLLCNa sc-htpNat gjQKzk"
                                              contentEditable={false}
                                              disabled={true}
                                              onBlur={[Function]}
                                              onClick={[Function]}
                                              onDoubleClick={[Function]}
                                              onKeyDown={[Function]}
                                              onKeyPress={[Function]}
                                              style={Object {}}
                                              suppressContentEditableWarning={true}
                                            >
                                              test title
                                            </span>
                                          </StyledComponent>
                                        </styled.span>
                                      </ThemeProvider>
                                    </Wrapper>
                                  </Label>
                                </StyledComponent>
                              </Styled(Label)>
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </ThemeProvider>
                    </Wrapper>
                  </Title>
                </li>
              </StyledComponent>
            </styled.li>
          </ThemeProvider>
        </Wrapper>
      </Item>
    </ThemeProvider>
  </Wrapper>
</ListItem>
`;

exports[`Test making ListItem control invisible 1`] = `
<ListItem
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={5}
  left=""
  leftButton={null}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="ListItem"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding=""
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={null}
  title="test title"
  tooltip=""
  top=""
  useedit={false}
  visible={false}
  widget={null}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    left=""
    leftButton={null}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="ListItem"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onError={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    padding=""
    reset={false}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={null}
    title="test title"
    tooltip=""
    top=""
    useedit={false}
    visible={false}
    widget={null}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <Item
        bottom=""
        className="ui-listitem"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={false}
        err={null}
        errorMessage=""
        focus={false}
        height=""
        hiddenLeftButton={false}
        hiddenRightButton={false}
        href={
          Object {
            "selectHandler": [Function],
            "sizing": "normal",
          }
        }
        id=""
        layout={5}
        left=""
        leftButton={null}
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="ListItem"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseOut={[Function]}
        onSelect={[Function]}
        onUpdate={[Function]}
        padding=""
        rightButton={null}
        selected={false}
        sizing="normal"
        stacked={false}
        style={Object {}}
        testing={true}
        theme={null}
        title="test title"
        tooltip=""
        top=""
        useedit={false}
        visible={false}
        widget={null}
        width=""
        xcss={null}
      >
        <Wrapper
          bottom=""
          className="ui-listitem"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage=""
          focus={false}
          height=""
          hiddenLeftButton={false}
          hiddenRightButton={false}
          href={
            Object {
              "selectHandler": [Function],
              "sizing": "normal",
            }
          }
          id=""
          layout={5}
          left=""
          leftButton={null}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          obj="ListItem"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDoubleClick={[Function]}
          onError={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          onSelect={[Function]}
          onUpdate={[Function]}
          padding=""
          reset={false}
          rightButton={null}
          selected={false}
          sizing="normal"
          stacked={false}
          style={Object {}}
          testing={true}
          theme={null}
          title="test title"
          tooltip=""
          top=""
          useedit={false}
          visible={false}
          widget={null}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "itemHoverColor": "#bedb39",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "titleBarBackgroundColor": "#004358",
                "titleBarForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.li
              className="ui-item ui-listitem"
              id=""
              nohover={false}
              onBlur={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseOut={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
            >
              <StyledComponent
                className="ui-item ui-listitem"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bZQynM",
                      "isStatic": false,
                      "lastClassName": "fXsBlq",
                      "rules": Array [
                        "
	background-color: ",
                        [Function],
                        ";
	color: ",
                        [Function],
                        ";
	cursor: default;
	display: flex;

	",
                        [Function],
                        "

	&:hover .ui-item-button {
		display: inline-flex;
		opacity: 1.0;
	}
",
                      ],
                    },
                    "displayName": "styled.li",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bZQynM",
                    "target": "li",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                id=""
                nohover={false}
                onBlur={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                selected={false}
                sizing="normal"
                style={Object {}}
              >
                <li
                  className="ui-item ui-listitem sc-bZQynM fXsBlq"
                  id=""
                  onBlur={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onMouseOut={[Function]}
                  selected={false}
                  style={Object {}}
                >
                  <Title
                    bottom=""
                    className="ui-listitem"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage=""
                    focus={false}
                    height=""
                    hiddenLeftButton={false}
                    hiddenRightButton={false}
                    href={
                      Object {
                        "selectHandler": [Function],
                        "sizing": "normal",
                      }
                    }
                    id=""
                    layout={5}
                    left=""
                    leftButton={null}
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    obj="ListItem"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onMouseOut={[Function]}
                    onSelect={[Function]}
                    onUpdate={[Function]}
                    padding=""
                    rightButton={null}
                    selected={false}
                    sizing="normal"
                    stacked={false}
                    style={Object {}}
                    testing={true}
                    theme={null}
                    title="test title"
                    tooltip=""
                    top=""
                    useedit={false}
                    visible={false}
                    widget={null}
                    width=""
                    xcss={null}
                  >
                    <Wrapper
                      bottom=""
                      className="ui-listitem"
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage=""
                      focus={false}
                      height=""
                      hiddenLeftButton={false}
                      hiddenRightButton={false}
                      href={
                        Object {
                          "selectHandler": [Function],
                          "sizing": "normal",
                        }
                      }
                      id=""
                      layout={5}
                      left=""
                      leftButton={null}
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      obj="ListItem"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                      onError={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseOut={[Function]}
                      onSelect={[Function]}
                      onUpdate={[Function]}
                      padding=""
                      reset={false}
                      rightButton={null}
                      selected={false}
                      sizing="normal"
                      stacked={false}
                      style={Object {}}
                      testing={true}
                      theme={null}
                      title="test title"
                      tooltip=""
                      top=""
                      useedit={false}
                      visible={false}
                      widget={null}
                      width=""
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#c0c0c0",
                            "color": "#000000",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "headerHoverColor": "#ffe11a",
                            "hoverColor": "#c0c0c0",
                            "inputBorderColor": "#c0c0c0",
                            "itemHoverColor": "#bedb39",
                            "selectedBackgroundColor": "#1f8a70",
                            "selectedForegroundColor": "#ffe11a",
                            "titleBarBackgroundColor": "#004358",
                            "titleBarForegroundColor": "#ffe11a",
                            "tooltipBackgroundColor": "#708090",
                            "tooltipForegroundColor": "#ffffff",
                            "transitionDelay": "0.5s",
                          }
                        }
                      >
                        <styled.div
                          className="ui-title-bar ripple ui-listitem"
                          disabled={false}
                          layout={5}
                          sizing="normal"
                          style={Object {}}
                          visible={false}
                        >
                          <StyledComponent
                            className="ui-title-bar ripple ui-listitem"
                            disabled={false}
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bxivhb",
                                  "isStatic": false,
                                  "lastClassName": "cSAToS",
                                  "rules": Array [
                                    "
	box-sizing: border-box;
	display: flex;
	flex-direction: ",
                                    [Function],
                                    ";
	flex-grow: 1;

	",
                                    [Function],
                                    "
	",
                                    [Function],
                                    "
",
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bxivhb",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            layout={5}
                            sizing="normal"
                            style={Object {}}
                            visible={false}
                          >
                            <div
                              className="ui-title-bar ripple ui-listitem sc-bxivhb cSAToS"
                              disabled={false}
                              style={Object {}}
                            >
                              <Styled(Label)
                                bottom=""
                                className="ui-title"
                                contentEditable={false}
                                controlled={true}
                                direction="right"
                                disabled={false}
                                err={null}
                                errorMessage=""
                                focus={false}
                                height=""
                                hiddenLeftButton={false}
                                hiddenRightButton={false}
                                href={
                                  Object {
                                    "selectHandler": [Function],
                                    "sizing": "normal",
                                  }
                                }
                                id=""
                                layout={5}
                                left=""
                                leftButton={null}
                                location="none"
                                noedit={false}
                                nohover={false}
                                noripple={false}
                                notheme={false}
                                obj="ListItem"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onDoubleClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyPress={[Function]}
                                onMouseOut={[Function]}
                                onSelect={[Function]}
                                padding=""
                                rightButton={null}
                                selected={false}
                                sizing="normal"
                                stacked={false}
                                style={Object {}}
                                testing={true}
                                text="test title"
                                theme={null}
                                title="test title"
                                tooltip=""
                                top=""
                                useedit={false}
                                visible={false}
                                widget={null}
                                width=""
                                xcss={
                                  Array [
                                    "
	text-align: left;
	flex: 5;
",
                                  ]
                                }
                              >
                                <StyledComponent
                                  bottom=""
                                  className="ui-title"
                                  contentEditable={false}
                                  controlled={true}
                                  direction="right"
                                  disabled={false}
                                  err={null}
                                  errorMessage=""
                                  focus={false}
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "sc-EHOje",
                                        "isStatic": false,
                                        "lastClassName": "hLLCNa",
                                        "rules": Array [
                                          "
	",
                                          "
	padding: ",
                                          [Function],
                                          ";

	",
                                          [Function],
                                          "
",
                                          "
",
                                        ],
                                      },
                                      "defaultStyles": Object {},
                                      "displayName": "Styled(Label)",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "sc-EHOje",
                                      "target": [Function],
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                      Symbol(Symbol.hasInstance): [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  height=""
                                  hiddenLeftButton={false}
                                  hiddenRightButton={false}
                                  href={
                                    Object {
                                      "selectHandler": [Function],
                                      "sizing": "normal",
                                    }
                                  }
                                  id=""
                                  layout={5}
                                  left=""
                                  leftButton={null}
                                  location="none"
                                  noedit={false}
                                  nohover={false}
                                  noripple={false}
                                  notheme={false}
                                  obj="ListItem"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  onDoubleClick={[Function]}
                                  onFocus={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onMouseOut={[Function]}
                                  onSelect={[Function]}
                                  padding=""
                                  rightButton={null}
                                  selected={false}
                                  sizing="normal"
                                  stacked={false}
                                  style={Object {}}
                                  testing={true}
                                  text="test title"
                                  theme={null}
                                  title="test title"
                                  tooltip=""
                                  top=""
                                  useedit={false}
                                  visible={false}
                                  widget={null}
                                  width=""
                                  xcss={
                                    Array [
                                      "
	text-align: left;
	flex: 5;
",
                                    ]
                                  }
                                >
                                  <Label
                                    bottom=""
                                    className="ui-title sc-EHOje hLLCNa"
                                    contentEditable={false}
                                    controlled={true}
                                    direction="right"
                                    disabled={false}
                                    err={null}
                                    errorMessage=""
                                    focus={false}
                                    height=""
                                    hiddenLeftButton={false}
                                    hiddenRightButton={false}
                                    href={
                                      Object {
                                        "selectHandler": [Function],
                                        "sizing": "normal",
                                      }
                                    }
                                    id=""
                                    layout={5}
                                    left=""
                                    leftButton={null}
                                    location="none"
                                    noedit={false}
                                    nohover={false}
                                    noripple={false}
                                    notheme={false}
                                    obj="ListItem"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onClick={[Function]}
                                    onDoubleClick={[Function]}
                                    onFocus={[Function]}
                                    onKeyDown={[Function]}
                                    onKeyPress={[Function]}
                                    onMouseOut={[Function]}
                                    onSelect={[Function]}
                                    onUpdate={[Function]}
                                    padding=""
                                    rightButton={null}
                                    selected={false}
                                    sizing="normal"
                                    stacked={false}
                                    style={Object {}}
                                    testing={true}
                                    text="test title"
                                    theme={null}
                                    title="test title"
                                    tooltip=""
                                    top=""
                                    useedit={false}
                                    visible={false}
                                    widget={null}
                                    width=""
                                    xcss={
                                      Array [
                                        "
	text-align: left;
	flex: 5;
",
                                      ]
                                    }
                                  >
                                    <Wrapper
                                      bottom=""
                                      className="ui-title sc-EHOje hLLCNa"
                                      contentEditable={false}
                                      controlled={true}
                                      direction="right"
                                      disabled={false}
                                      err={null}
                                      errorMessage=""
                                      focus={false}
                                      height=""
                                      hiddenLeftButton={false}
                                      hiddenRightButton={false}
                                      href={
                                        Object {
                                          "selectHandler": [Function],
                                          "sizing": "normal",
                                        }
                                      }
                                      id=""
                                      layout={5}
                                      left=""
                                      leftButton={null}
                                      location="none"
                                      noedit={false}
                                      nohover={false}
                                      noripple={false}
                                      notheme={false}
                                      obj="ListItem"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onClick={[Function]}
                                      onDoubleClick={[Function]}
                                      onError={[Function]}
                                      onFocus={[Function]}
                                      onKeyDown={[Function]}
                                      onKeyPress={[Function]}
                                      onMouseOut={[Function]}
                                      onSelect={[Function]}
                                      onUpdate={[Function]}
                                      padding=""
                                      reset={false}
                                      rightButton={null}
                                      selected={false}
                                      sizing="normal"
                                      stacked={false}
                                      style={Object {}}
                                      testing={true}
                                      text="test title"
                                      theme={null}
                                      title="test title"
                                      tooltip=""
                                      top=""
                                      useedit={false}
                                      visible={false}
                                      widget={null}
                                      width=""
                                      xcss={
                                        Array [
                                          "
	text-align: left;
	flex: 5;
",
                                        ]
                                      }
                                    >
                                      <ThemeProvider
                                        theme={
                                          Object {
                                            "backgroundColor": "#ffffff",
                                            "borderColor": "#c0c0c0",
                                            "color": "#000000",
                                            "headerBackgroundColor": "#004358",
                                            "headerForegroundColor": "#ffffff",
                                            "headerHoverColor": "#ffe11a",
                                            "hoverColor": "#c0c0c0",
                                            "inputBorderColor": "#c0c0c0",
                                            "itemHoverColor": "#bedb39",
                                            "selectedBackgroundColor": "#1f8a70",
                                            "selectedForegroundColor": "#ffe11a",
                                            "titleBarBackgroundColor": "#004358",
                                            "titleBarForegroundColor": "#ffe11a",
                                            "tooltipBackgroundColor": "#708090",
                                            "tooltipForegroundColor": "#ffffff",
                                            "transitionDelay": "0.5s",
                                          }
                                        }
                                      >
                                        <styled.span
                                          className="ui-label ui-title sc-EHOje hLLCNa"
                                          contentEditable={false}
                                          disabled={false}
                                          onBlur={[Function]}
                                          onClick={[Function]}
                                          onDoubleClick={[Function]}
                                          onKeyDown={[Function]}
                                          onKeyPress={[Function]}
                                          sizing="normal"
                                          style={Object {}}
                                          suppressContentEditableWarning={true}
                                          visible={false}
                                        >
                                          <StyledComponent
                                            className="ui-label ui-title sc-EHOje hLLCNa"
                                            contentEditable={false}
                                            disabled={false}
                                            forwardedComponent={
                                              Object {
                                                "$$typeof": Symbol(react.forward_ref),
                                                "attrs": Array [],
                                                "componentStyle": ComponentStyle {
                                                  "componentId": "sc-htpNat",
                                                  "isStatic": false,
                                                  "lastClassName": "bUAzux",
                                                  "rules": Array [
                                                    "
	background-color: inherit;

	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
	",
                                                    [Function],
                                                    "
",
                                                  ],
                                                },
                                                "displayName": "styled.span",
                                                "foldedComponentIds": Array [],
                                                "render": [Function],
                                                "styledComponentId": "sc-htpNat",
                                                "target": "span",
                                                "toString": [Function],
                                                "warnTooManyClasses": [Function],
                                                "withComponent": [Function],
                                              }
                                            }
                                            forwardedRef={[Function]}
                                            onBlur={[Function]}
                                            onClick={[Function]}
                                            onDoubleClick={[Function]}
                                            onKeyDown={[Function]}
                                            onKeyPress={[Function]}
                                            sizing="normal"
                                            style={Object {}}
                                            suppressContentEditableWarning={true}
                                            visible={false}
                                          >
                                            <span
                                              className="ui-label ui-title sc-EHOje hLLCNa sc-htpNat bUAzux"
                                              contentEditable={false}
                                              disabled={false}
                                              onBlur={[Function]}
                                              onClick={[Function]}
                                              onDoubleClick={[Function]}
                                              onKeyDown={[Function]}
                                              onKeyPress={[Function]}
                                              style={Object {}}
                                              suppressContentEditableWarning={true}
                                            >
                                              test title
                                            </span>
                                          </StyledComponent>
                                        </styled.span>
                                      </ThemeProvider>
                                    </Wrapper>
                                  </Label>
                                </StyledComponent>
                              </Styled(Label)>
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </ThemeProvider>
                    </Wrapper>
                  </Title>
                </li>
              </StyledComponent>
            </styled.li>
          </ThemeProvider>
        </Wrapper>
      </Item>
    </ThemeProvider>
  </Wrapper>
</ListItem>
`;

exports[`Test retrieval of ListItem props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "hiddenLeftButton": false,
  "hiddenRightButton": false,
  "href": Object {
    "selectHandler": [Function],
    "sizing": "normal",
  },
  "id": "",
  "layout": 5,
  "left": "",
  "leftButton": null,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "obj": "ListItem",
  "onBlur": [Function],
  "onChange": [Function],
  "onClick": [Function],
  "onDoubleClick": [Function],
  "onFocus": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onMouseOut": [Function],
  "onSelect": [Function],
  "onUpdate": [Function],
  "padding": "",
  "rightButton": null,
  "selected": false,
  "sizing": "normal",
  "stacked": false,
  "style": Object {},
  "testing": true,
  "theme": null,
  "title": "​",
  "tooltip": "",
  "top": "",
  "useedit": false,
  "visible": true,
  "widget": null,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the creation of a ListItem control with left & right title 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={5}
  left=""
  leftButton={null}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="ListItem"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onError={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding=""
  reset={false}
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={null}
  title="test title left"
  tooltip=""
  top=""
  useedit={false}
  visible={true}
  widget="test title right"
  width=""
  xcss={null}
>
  <Item
    bottom=""
    className="ui-listitem"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    left=""
    leftButton={null}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="ListItem"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    padding=""
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={null}
    title="test title left"
    tooltip=""
    top=""
    useedit={false}
    visible={true}
    widget="test title right"
    width=""
    xcss={null}
  />
</Wrapper>
`;

exports[`Test the creation of a ListItem control with simple title 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={5}
  left=""
  leftButton={null}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="ListItem"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onError={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding=""
  reset={false}
  rightButton={null}
  selected={true}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={null}
  title="test title"
  tooltip=""
  top=""
  useedit={false}
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <Item
    bottom=""
    className="ui-listitem"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    left=""
    leftButton={null}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="ListItem"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    padding=""
    rightButton={null}
    selected={true}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={null}
    title="test title"
    tooltip=""
    top=""
    useedit={false}
    visible={true}
    widget={null}
    width=""
    xcss={null}
  />
</Wrapper>
`;
